--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.76.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
